--- a/src/main/resources/languages/english.yml
+++ b/src/main/resources/languages/english.yml
@@ -1,5 +1,6 @@
 error:
   invalidIDType: '&c&o&v1 &cis not a valid ID type.'
+  io: 'An I/O error occurred.'
   noObject: '&cThis &v1 does not exist.'
   noPermission: '&cYou do not have permission to use the command &o&v1&r&c.'
   noConsoleCommand: '&cThe command &o&v1&r&c is not a console command!'
@@ -7,7 +8,8 @@ error:
   noItemInHand: '&cYou do not have an item in your main hand.'
   noMobNearby: '&cThere is no mob nearby.'
   noPlayerCommand: '&cThe command &o&v1&r&c is not a player command!'
-  coordsNotNumeric: '&4Coordinates must be numeric.'
+  coordsNotNumeric: '&cCoordinates must be numeric.'
+  vanillaFeature: '&cYou cannot override Vanilla features.'
 command:
   give:
     success: '&7You gave &o&v1x &v2&7 to &o&v3&7.'
@@ -35,8 +37,8 @@ help:
   list: '&7List all custom items. Usage: &o/ixl list [page]'
   main: '&7General status information.'
   open: '&7Open the item box in your hand.'
-  registerItem: '&7Registers an item as a Caliburn item. Usage: &o/ixl ri [ID]'
-  registerMob: '&7Registers a mob as a Caliburn mob. Usage: &o/ixl rm [ID]'
+  registerItem: '&7Registers an item as a Caliburn item. Usage: &o/ixl ri [ID] [ID Type]'
+  registerMob: '&7Registers a mob as a Caliburn mob. Usage: &o/ixl rm [ID] [ID Type]'
   reload: '&7Reload all configs and data. Usage: &o/ixl reload'
   serialize: '&7Serialize the item stack in your hand. Usage: &o/ixl serialize ([simple])'
   summon: '&7Summons a mob. Usage: &o: /ixl summon [mob] ([world x y z yaw pitch])'
