--- a/src/main/resources/languages/english.yml
+++ b/src/main/resources/languages/english.yml
@@ -15,6 +15,7 @@ command:
     success: '&7You gave &o&v1x &v2&7 to &o&v3&7.'
   lootTable:
     deleted: '&7Successfully deleted loot table &o&v1&r&7.'
+    saved: '&7Successfully saved loot table &o&v1&7.'
     title: '&9Right-click an item to set its chance.'
   main:
     welcome: '&7Welcome to &4Items&fXL'
@@ -50,5 +51,6 @@ help:
 object:
   player: player
   item: item
+  lootTable: loot table
   mob: mob
   world: world
