--- a/src/main/resources/languages/english.yml
+++ b/src/main/resources/languages/english.yml
@@ -40,6 +40,7 @@ help:
   lootTable: "&7Creates a new or edits an existing loot table. Usage: &o/ixl lootTable [name] ([-delete,d])"
   main: "&7General status information."
   open: "&7Open the item box in your hand."
+  recipeEditor: "&7Opens an recipe editor. Usage: &o/ixl recipeEditor [recipe]"
   registerItem: "&7Registers an item as a Caliburn item. Usage: &o/ixl ri [ID] [ID Type]"
   registerMob: "&7Registers a mob as a Caliburn mob. Usage: &o/ixl rm [ID] [ID Type]"
   reload: "&7Reload all configs and data. Usage: &o/ixl reload"
@@ -51,3 +52,8 @@ object:
   mob: mob
   player: player
   world: world
+editor:
+  shapedRecipe: "&7Shaped&8: &atrue"
+  shapelessRecipe: "&7Shaped&8: &cfalse"
+  addRecipe: "&aAdd Recipe ✓"
+  missingResult: "&aMissing result"
